--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="footer-info">
                 <p>Alamat: JL. CISALADA NO. O1 DS. CISALADA KEC. CIGOMBONG KAB. BOGOR.</p>
-                <p>Email: mrapi8417@gmail.com</p>
+                <p>Email: muhammadrapiudinn@gmail.com</p>
                 <p>Telepon: +62-857-805-964-04</p>
             </div>
         </div>
